--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -87,17 +87,17 @@
 		      </div>
 		      <form class="w3-container" action="login" method="post">
 		        <div class="w3-section">
-		          <label><b>Username</b></label>
-		          <input class="w3-input w3-border-bottom w3-margin-bottom" type="text" placeholder="Inserisci il tuo username" name="username" required>
-		          <label><b>Password</b></label>
-		          <input class="w3-input w3-border-bottom w3-margin-bottom" type="password" placeholder="Inserisci la tua password" name="password" required>
+		          <label for="username"><b>Username</b></label>
+		          <input id="username" class="w3-input w3-border-bottom w3-margin-bottom" type="text" placeholder="Inserisci il tuo username" name="username" autocomplete="off" required />
+		          <label for="password"><b>Password</b></label>
+		          <input id="password" class="w3-input w3-border-bottom w3-margin-bottom" type="password" placeholder="Inserisci la tua password" name="password" required />
 		          <button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit" name="login" value="login">Login</button>
 		        </div>
 		      </form>
 		      
 		      <div class="w3-container w3-border-top w3-padding w3-round-bottom">
-		        <span class="w3-left w3-padding-large pointer">Registrati</span>
-		        <span class="w3-right w3-padding-large pointer">Password dimenticata?</span>
+		        <span class="w3-left  pointer info">Registrati</span>
+		        <span class="w3-right pointer info">Password dimenticata?</span>
 		      </div>
 		      </div>
 	      </div>
