--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -71,7 +71,7 @@
 	</div>
     <!-- FOOTER -->
     <footer class="w3-container univaq-color-background">
-        <h5>Footer</h5>
+        <h5>Copyright &copy; 2018 Martella Stefano, Icaro Iari, Morelli Davide</h5>
     </footer>
     
     <!-- Modals -->
