--- a/IntershipTutor/WebContent/templates/gestore-azienda.ftl.html
+++ b/IntershipTutor/WebContent/templates/gestore-azienda.ftl.html
@@ -77,7 +77,7 @@
 	          <p class="info">
 	          	<i class="far fa-calendar-alt fa-fw w3-margin-right"></i>
 	          	da ${tirocinio.dataInizio?iso_local} al ${tirocinio.dataFine?iso_local}
-	          	<span class="w3-tag univaq-color-background w3-round">Current</span>
+	          	<!-- <span class="w3-tag univaq-color-background w3-round">Current</span>  -->
 	          </p>
 	          <p class="descrizione-tirocinio">${tirocinio.modalita}</p>
 	        </div>
