--- a/IntershipTutor/WebContent/templates/gestore-offerta-tirocinio.ftl.html
+++ b/IntershipTutor/WebContent/templates/gestore-offerta-tirocinio.ftl.html
@@ -59,7 +59,7 @@
           	<p class="info">
           		<i class="far fa-calendar-alt fa-fw w3-margin-right"></i>
           		da ${offertaTirocinio.dataInizio?iso_local} al ${offertaTirocinio.dataFine?iso_local} 
-          		<span class="w3-tag w3-round univaq-color-background">Current</span>
+          		<!-- <span class="w3-tag w3-round univaq-color-background">Current</span> -->
           	</p>
           	<h5 class="bold"><b>Obiettivi</b></h5>
           		<p class="descrizione-tirocinio">${offertaTirocinio.obiettivi}</p>	        
