--- a/IntershipTutor/WebContent/style/container.css
+++ b/IntershipTutor/WebContent/style/container.css
@@ -30,7 +30,12 @@ h4{
 }
 
 textarea {
-    max-width: 100%; 
+    max-width: 100%;
+    height: 100px
+}
+
+footer h5{
+	font-size: 13px
 }
 
 .fa,
