--- a/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
@@ -9,12 +9,12 @@
     <div class="w3-quarter">
     
       <div class="w3-card w3-round">
-        <div class="w3-container w3-padding">
-          <a href="./azienda?azienda=${azienda.utente}">
-          	<h2 id="nome-azienda">
-          		${azienda.nome}
-            </h2>
-          </a>
+        <div class="w3-padding">
+          <h2 id="nome-azienda">
+       		<a href="./azienda?azienda=${azienda.utente}">
+       			${azienda.nome}
+       		</a>
+          </h2>
           <hr />
           <p class="info">
           	<i class="fa fa-user fa-fw w3-margin-right"></i>
