--- a/IntershipTutor/WebContent/style/container.css
+++ b/IntershipTutor/WebContent/style/container.css
@@ -18,8 +18,11 @@ h2{
 	font-size: 140% !important
 }
 
-h2 a{
-	font-weight: 500
+h3.profile{
+	margin-top: 30px !important;
+	margin-bottom: 20px !important;
+	font-size: 20px;
+	font-style: italic
 }
 
 h4{
@@ -32,6 +35,14 @@ h4{
 textarea {
     max-width: 100%;
     height: 100px
+}
+
+textarea::-webkit-scrollbar{
+	width: 4px;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: #dedede;
 }
 
 footer h5{
@@ -175,24 +186,6 @@ input:checked ~ #label-search:after {
 /* End collapsible */
 
 /* Modals without js */
-#add-intership-modal,
-#pareri-azienda-modal,
-#update-student-modal,
-#update-company-modal,
-#login-modal{
-	position: fixed;
-	/* Doesn't work on edge and firefox, find a workaround or keep the ugly effect */
-	overflow-y: scroll;
-}
-
-#add-intership-modal::-webkit-scrollbar,
-#pareri-azienda-modal::-webkit-scrollbar,
-#update-student-modal::-webkit-scrollbar,
-#update-company-modal::-webkit-scrollbar,
-#login-modal::-webkit-scrollbar { 
-    display: none; 
-}
-
 .overlay {
 	position: absolute;
 	top: 0;
@@ -203,11 +196,18 @@ input:checked ~ #label-search:after {
 	transition: opacity 200ms;
 	visibility: hidden;
 	opacity: 0;
+	position: fixed;
+	/* Doesn't work on edge and firefox, find a workaround or keep the ugly effect */
+	overflow-y: scroll;
 }
 
 .overlay:target{
    visibility: visible;
    opacity: 1; 
+}
+
+.overlay::-webkit-scrollbar { 
+    display: none; 
 }
 
 .popup {
@@ -216,6 +216,18 @@ input:checked ~ #label-search:after {
 	position: relative;
 }
 /* End modals without js */
+
+/* Modal login, signup */
+div.tab-frame input[type="radio"]{ display:none;}
+div.tab-frame label.tab-label{ display:block; float:left;padding:5px 10px; cursor:pointer;}
+div.tab-frame input[type="radio"]:checked + label.tab-label{ background:#822627; color:white; cursor:default;}
+div.tab-frame div.tab{ display:none; padding:5px 10px;clear:left}
+
+div.tab-frame input[type="radio"]:nth-of-type(1):checked ~ .tab:nth-of-type(1),
+div.tab-frame input[type="radio"]:nth-of-type(2):checked ~ .tab:nth-of-type(2),
+div.tab-frame input[type="radio"]:nth-of-type(3):checked ~ .tab:nth-of-type(3)
+{ display:block;}
+/* End modal login signup*/
 
 /* My classes */
 .info{
